--- a/css/style_main.css
+++ b/css/style_main.css
@@ -19,12 +19,17 @@ ul {
   border-radius: 10px;
   border-width: 4px;
   text-align: center;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
 }
 
 ul li {
   list-style: none;
   display: inline-block;
-  padding: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 a button {
@@ -36,6 +41,22 @@ a button {
 a button:hover {
   transform: scale(1.5);
   transition-duration: 0.5s;
+}
+
+.main {
+  background-color: white;
+  border: none;
+  border-radius: 10px;
+  width: 100%;
+  height: auto;
+  color: black;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 25px;
+}
+
+.main p {
+  padding: 25px;
+  text-align: left;
 }
 
 /*  */
