--- a/css/style_main.css
+++ b/css/style_main.css
@@ -19,7 +19,8 @@ ul {
   border-radius: 10px;
   border-width: 4px;
   text-align: center;
-  width: 600px;
+  width: 50%;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
